--- a/app/src/main/res/layout/constraintlayout.xml
+++ b/app/src/main/res/layout/constraintlayout.xml
@@ -21,6 +21,7 @@
         android:id="@+id/imageView3"
         android:layout_width="258dp"
         android:layout_height="270dp"
+        android:background="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
