--- a/app/src/main/res/layout/relativelayout.xml
+++ b/app/src/main/res/layout/relativelayout.xml
@@ -18,12 +18,13 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="248dp"
-        android:layout_height="243dp"
+        android:layout_width="match_parent"
+        android:layout_height="283dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginStart="-18dp"
         android:layout_marginTop="50dp"
-        android:background="@mipmap/ic_launcher" />
+        android:background="@drawable/infinity" />
 
     <TextView
         android:id="@+id/textView5"
@@ -31,8 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="247dp"
-        android:text="TITLE" />
+        android:layout_marginBottom="203dp"
+        android:text="TUGAWE COVE RESORT" />
 
     <TextView
         android:id="@+id/textView6"
@@ -40,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/textView7"
-        android:layout_marginBottom="177dp"
+        android:layout_marginBottom="156dp"
         android:text="Location:" />
 
     <TextView
@@ -48,9 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="125dp"
-        android:layout_marginStart="28dp"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginBottom="122dp"
         android:text="Distance from UST:" />
 
     <Button
@@ -58,15 +58,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="45dp"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginBottom="47dp"
         android:text="BACK" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/imageView2"
         android:layout_alignTop="@+id/button3"
         android:text="NEXT" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_alignTop="@+id/textView6"
+        android:text="Brgy. Colongcogong, Caramoan, Luzon" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/textView7"
+        android:layout_marginEnd="150dp"
+        android:text="328.81 km" />
 </RelativeLayout>
