--- a/app/src/main/res/layout/relativelayout.xml
+++ b/app/src/main/res/layout/relativelayout.xml
@@ -20,10 +20,9 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="283dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_marginStart="-18dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="63dp"
         android:background="@drawable/infinity" />
 
     <TextView
@@ -32,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="203dp"
+        android:layout_marginBottom="193dp"
         android:text="TUGAWE COVE RESORT" />
 
     <TextView
@@ -66,8 +65,9 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/imageView2"
+        android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/button3"
+        android:layout_marginEnd="20dp"
         android:text="NEXT" />
 
     <TextView
